@@ -13990,7 +13990,7 @@
       },
       {
         "minAmount": "1",
-        "weight": "25.0",
+        "weight": "50.0",
         "id": "993",
         "maxAmount": "1"
       },
